<?xml version="1.0" encoding="utf-8"?>
<!-- Main container layout for a calculatorApp -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp">

    <!-- Top TextView for display, using double-height for visibility -->
    <TextView
        android:id="@+id/calcDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical|end"
        android:paddingEnd="10dp"
        android:text="@string/btn_0"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="80sp"
        android:textStyle="bold" />

    <!-- TableLayout for organizing calculator buttons in a grid -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:stretchColumns="*">

        <!-- First row of calculator buttons: Clear, Sign Change, Percent, Divide -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_clear"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_sign"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnPercent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_percent"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_divide"
                android:textSize="30sp" />
        </TableRow>

        <!-- Second row: Numeric buttons 7, 8, 9 and Multiply -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_7"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_8"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_9"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_multiply"
                android:textSize="30sp" />
        </TableRow>

        <!-- Third row: Numeric buttons 4, 5, 6 and Subtract -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_4"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_5"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_6"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_minus"
                android:textSize="30sp" />
        </TableRow>

        <!-- Fourth row: Numeric buttons 1, 2, 3 and Add -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_1"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_2"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_3"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_plus"
                android:textSize="30sp" />
        </TableRow>

        <!-- Fifth row: Numeric button 0 (double width), Decimal point, and Equals -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn0"
                android:layout_span="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="2dp"
                android:text="@string/btn_0"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_dot"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btnEquals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/btn_equals"
                android:textSize="30sp" />
        </TableRow>

    </TableLayout>
</LinearLayout>

